tests/badinc3.out
In file included from ./badinc3.svx:3:
In file included from ./badinc2.svx:3:
./badinc.svx:3: error: Couldn't open file "nonexistent_file"
cavern: error: No survey data
