tests/badinc3.svx
; pos=fail
; include of a file which includes a file which includes a nonexistent file
*include badinc2
